-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: 8.0.0-rc0
-
Component/s: Internal Code
-
Cluster Scalability
-
Fully Compatible
-
ALL
-
v8.0
-
Cluster Scalability 2024-5-13
-
None
-
3
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Uninitialized scalar variable
The variable will contain an arbitrary value left from earlier computations. Use of an uninitialized variable
/src/mongo/db/s/range_deletion_util.cpp:340: UNINIT 141056 Declaring variable "numDeleted" without initializer.
/src/mongo/db/s/range_deletion_util.cpp:374: UNINIT 141056 Using uninitialized value "numDeleted".