SERVER-89425 Fix coverity error: initialize variable numDeleted (#21581)

Initialize variable numDeleted in range_deletion_util.cpp.

GitOrigin-RevId: f613b224a1d2ff87e42041c40707a1445a8d873d